使用 Colaboratory 创建

--- a/linear_regression_gluon.ipynb
+++ b/linear_regression_gluon.ipynb
@@ -225,6 +225,36 @@
       "metadata": {
         "id": "KzFhhQ8p3Bwp",
         "colab_type": "code",
+        "colab": {
+          "base_uri": "https://localhost:8080/",
+          "height": 84
+        },
+        "outputId": "2cc072bc-7f97-432d-ef64-9541a0d76705"
+      },
+      "cell_type": "code",
+      "source": [
+        "dense = net[0]\n",
+        "print(dense.weight.data())\n",
+        "print(true_w)"
+      ],
+      "execution_count": 60,
+      "outputs": [
+        {
+          "output_type": "stream",
+          "text": [
+            "\n",
+            "[[-3.3003426  2.7996454]]\n",
+            "<NDArray 1x2 @cpu(0)>\n",
+            "[-3.3, 2.8]\n"
+          ],
+          "name": "stdout"
+        }
+      ]
+    },
+    {
+      "metadata": {
+        "id": "O-gMFuVk4CSF",
+        "colab_type": "code",
         "colab": {}
       },
       "cell_type": "code",
